fix slider align

--- a/style.css
+++ b/style.css
@@ -373,8 +373,8 @@ h6 {
 
 #intro .carousel-content {
   text-align: left;
-  width: 65%;
-  padding-left: 5rem;
+  width: 55%;
+  padding-left: 0;
 }
 
 #intro h1,
@@ -383,7 +383,7 @@ h6 {
 #intro h4,
 #intro h5{
   margin-bottom: 10px;
-  font-size: 56px;
+  font-size: 45px;
   font-weight: 900;
   line-height: 1;
   margin-top: 16px;
